
<?xml version="1.0"?>
<package>
  <name>jackal_rtabmap</name>
  <version>0.0.0</version>
  <description>The jackal_rtabmap package</description>
  <maintainer email="lw734@cornell.edu">Lindsey Woo</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/jackal_control</url> -->
  <!-- <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author> -->

 <!-- For Jackal Control -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>